added ngsolve code

--- a/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
+++ b/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
@@ -170,9 +170,9 @@
     "| Oberer Rand         | beliebig     | $n_z = 0$                    | $0$           | $n_r \\neq 0$                 |\n",
     "\n",
     "### Schwache Gleichung\n",
-    "Mit den beschriebenen Randbedingungen (Dirichlet-Randbedingung auf Rotationsachse, homogene Neumann-Randbedingung auf restlichen Randabschnitten) folgt aus {eq}`eq:schwacheGlgmitRand` die folgende schwache Gleichung\n",
+    "Mit den beschriebenen Randbedingungen (Dirichlet-Randbedingung auf Rotationsachse, homogene Neumann-Randbedingung auf restlichen Randabschnitten) folgt aus {eq}`eq:schwacheGlgmitRand` die folgende schwache Gleichung für alle $v \\in H^1 $ mit $v=0$ auf $\\partial\\Omega_{\\text{rotsym}}$\n",
     "\n",
-    "> $$ \\underbrace{ \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega }_{\\text{Bilinearform } a(A_\\phi, v)} = \\underbrace{ \\int_\\Omega j_\\phi v \\, d\\Omega }_{\\text{Linearform }  f(v)}, \\quad \\forall v \\in H^1 \\,|\\, v=0 \\text{ auf } \\partial\\Omega_{\\text{rotsym}}$$(eq:schwacheGlgWirbelstrom)\n",
+    "> $$ \\underbrace{ \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega }_{\\text{Bilinearform } a(A_\\phi, v)} = \\underbrace{ \\int_\\Omega j_\\phi v \\, d\\Omega }_{\\text{Linearform }  f(v)}, \\quad \\forall v \\in H^1$$(eq:schwacheGlgWirbelstrom)\n",
     "\n",
     "wobei die Bilinearform  $a(A_\\phi, v)$  durch die Terme\n",
     "\n",
@@ -185,43 +185,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c62c9fb-f79b-460a-8c58-22a4c59445fe",
+   "id": "03fe92ee-f3ad-4e6b-b63f-24b1ec1eebeb",
    "metadata": {},
    "source": [
-    "## Herleitung schwache Gleichung\n",
-    "Die schwache Formulierung ergibt sich, indem man beide Seiten der Differentialgeleichung {eq}`eq:Arotsym` mit einer Testfunktion  $v \\in H^1$ (komplexwertiger FE-Raum) multipliziert und über das Gebiet  $\\Omega$ integriert:\n",
+    "## Definition mit NGsolve\n",
+    "Die schwache Gleichung {eq}`eq:schwacheGlgWirbelstrom` wird nun mittels NGsolve definiert.\n",
     "\n",
-    "$$\n",
-    "\\int_\\Omega \\left( \\sigma j \\omega A_\\phi v - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v - \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) v \\right) \\, d\\Omega = \\int_\\Omega j_\\phi v \\, d\\Omega\n",
-    "$$\n",
-    "\n",
-    "Das Teilintegral mit zwei Ableitungen nach $r$ lässt sich durch partielle Integration und die Produktregel vereinfachen.\n",
-    "\n",
-    "$$ \\frac{\\partial (r A_\\phi)}{\\partial r}=A_\\phi + r \\frac{\\partial (A_\\phi)}{\\partial r} \\quad \\text{(Produktregel)}$$\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned} \\int_\\Omega - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v \\, d\\Omega &= \\underbrace{ \\left[ - \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} v \\right]_{\\partial\\Omega}}_{=0} +\n",
-    "\\int_\\Omega \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\frac{\\partial v}{\\partial r} \\, d\\Omega \\\\ &=  \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega  \\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "Die partielle Integration wird auch aufs Teilintegral mit zwei Ableitungen nach $z$ angewendet.\n",
-    "\n",
-    "$$\n",
-    "\\int_\\Omega - \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) v \\, d\\Omega = \\underbrace{ \\left[ - \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} v \\right]_{\\partial\\Omega}}_{=0} +\n",
-    "\\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega\n",
-    "$$\n",
-    "\n",
-    "Die schwache Formulierung der Differentialgleichung lautet\n",
-    "\n",
-    "> $$ \\underbrace{ \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega }_{\\text{Bilinearform } a(A_\\phi, v)} = \\underbrace{ \\int_\\Omega j_\\phi v \\, d\\Omega }_{\\text{Linearform }  f(v)}, \\quad \\forall v \\in H^1$$(eq:schwacheGlgWirbelstrom)\n",
-    "\n",
-    "wobei die Bilinearform  $a(A_\\phi, v)$  durch die Terme\n",
-    "\n",
-    "$$\n",
-    "a(A_\\phi, v) = \\int_\\Omega \\sigma j \\omega A_\\phi v \\, d\\Omega + \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega  + \\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega\n",
-    "$$\n",
-    "\n",
-    "definiert ist."
+    "```{literalinclude} ../ImportExport/wirbelstrom_def.py\n",
+    ":language: python\n",
+    ":name: wirbelstrom_def_include\n",
+    ":caption: Inhalt von wirbelstrom_def.py\n",
+    "```"
    ]
   }
  ],
