einige kl Dinge

--- a/hana_project_book/Geometrie/stdGeo.ipynb
+++ b/hana_project_book/Geometrie/stdGeo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "11d58a99-5191-4025-bcc8-e256403a00d5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "cdb507ec-564d-4575-b603-99c3daf6ad28",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "88e46a2d-03e9-4594-8861-f5bb6f6f20a7",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "16afd307-73db-452f-82eb-a5bb80565572",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "003f47e74777417289d0bd96ec51f28d",
+       "model_id": "624a9a1ec15e41d2abb2b4a44fd6f5e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +162,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +177,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03134d91-50bd-4177-9d26-f13ba10e2d65",
+   "metadata": {},
+   "source": [
+    "## Stromdichte speichern\n",
+    "Gemäss Gleichung {eq}`eq:Jrotsym` wird die Stromdichte berechnet und gespeichert. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f84b01de-a5c0-4650-b6d8-781b29b99b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Jimp = CoefficientFunction([0,ic/(r_wire**2*pi),0])\n",
+    "Vstore = L2(mesh, order=4)\n",
+    "gf = GridFunction(Vstore)\n",
+    "gf.Set(Jimp)\n",
+    "#Draw(gf, mesh)\n",
+    "# Now save as above\n",
+    "gf.Save(\"../ImportExport/JimpStdGeo.gf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "766f09e0-7c0f-42d0-9d3e-baf9c538a720",
    "metadata": {},
    "source": [
@@ -185,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "38239788-a970-40f4-afff-7b056e6e5835",
    "metadata": {},
    "outputs": [],
