--- a/hana_project_book/LsgVisualisierungDiskussion/LsgStdGeo.ipynb
+++ b/hana_project_book/LsgVisualisierungDiskussion/LsgStdGeo.ipynb
@@ -69,16 +69,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assembling...\n",
-      "Solving system...\n",
+      "Assembling BilinearForm 'a'...\n",
+      "Assembling LinearForm 'f'...\n",
+      "Solving system for A_phi...\n",
       "System solved.\n",
-      "Drawing A_phi (Norm)\n"
+      "Drawing |A_phi| (Magnitude of A_phi)...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb8db24ad4f54a75926efed712f04ade",
+       "model_id": "e7d3c22ec6e5476199bd5dedc6c6e270",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,30 +93,172 @@
    ],
    "source": [
     "# Create an instance of the problem\n",
-    "problem = EddyCurrentProblem(mesh, Jimp, omega, sigma, nu)\n",
+    "ecp = EddyCurrentProblem(mesh, Jimp, omega, sigma, nu)\n",
     "\n",
     "# Solve the problem\n",
-    "solution_gfu = problem.solve()\n",
+    "gfu = ecp.solve()\n",
     "\n",
     "# Draw the solution\n",
-    "if solution_gfu:\n",
-    "    problem.draw_solution()"
+    "if gfu:\n",
+    "    ecp.draw_solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "358e6a27-39e1-41ec-928f-55e5edb2b4f0",
+   "metadata": {},
+   "source": [
+    "## Berechnung und Visualisierung B-Feld\n",
+    "Aus dem Vektorpotential $A_\\phi$ können nun mit den Gleichungen {eq}`eq:Brotsym` die Komponenten des B-Feldes berechnet werden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5ca17c8e-69b9-4d86-929e-9425dffc8525",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating B-field components...\n",
+      "B-field components calculated.\n",
+      "Drawing B_z (complex)...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a970c65d7204e378d3e3b4d1f12f342",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 'sp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drawing B_r (complex)...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0007f8d82f444598939dbd595d57ae21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 'sp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drawing |B| (Magnitude of B-field)...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b45439866f7407bb0cd77c62b1300d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ecp.calculate_b_field()\n",
+    "ecp.draw_b_field_components()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7bd86c7a-169f-4a5d-bb76-9809de076e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drawing B-vector field (real part) at t = 0 ms ...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "109b874a45f74240950fdf7f1b6e6630",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drawing B-vector field (real part) at t = 10.0 ms ...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9eea6e3d52274feaad2017cd8b555a23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ecp.draw_b_vector_field(time_val=0)\n",
+    "ecp.draw_b_vector_field(time_val=10e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c87e9c2b-65f5-4d98-9179-8272dcb41501",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ecp.showAnimation(store_ani=True)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "766f09e0-7c0f-42d0-9d3e-baf9c538a720",
+   "id": "05b5074f-e2aa-46ed-8aa9-4edfd43c3c61",
    "metadata": {},
    "source": [
-    "## Mesh speichern"
+    "![GIF animation of B-field](../ImportExport/animation.gif)"
    ]
   }
  ],
