--- a/hana_project_book/Problemformulierung/FormulierungWirbelstrom.ipynb
+++ b/hana_project_book/Problemformulierung/FormulierungWirbelstrom.ipynb
@@ -13,9 +13,7 @@
    "id": "84edfb7e-fb63-463b-9b38-39cb574e6026",
    "metadata": {},
    "source": [
-    "Der Herleitung der rotationssymmetrischen Differentialgleichung folgt der Aufgabenstellung {cite:p}`Stingelin2025HANAProjekt`.\n",
-    "\n",
-    "*Mehr Grundlagen ergänzen, auf Randbedingungen eingehen*"
+    "Der Herleitung der rotationssymmetrischen Differentialgleichung folgt der Aufgabenstellung {cite:p}`Stingelin2025HANAProjekt`."
    ]
   },
   {
@@ -195,6 +193,48 @@
     ":language: python\n",
     ":name: wirbelstrom_def_include\n",
     ":caption: Inhalt von wirbelstrom_def.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a96c7cbe-a7e4-42ed-9ff6-5ca9b41923c3",
+   "metadata": {},
+   "source": [
+    "## Induktive Wärmequelle\n",
+    "\n",
+    "Die induktive Wärmequelle ist gegeben durch die mittleren Wärmeverluste des elektromagnetischen Feldes\n",
+    "\n",
+    "$$\n",
+    "q = \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E}^* |\n",
+    "$$\n",
+    "\n",
+    "wobei mit $\\mathbf{J} = \\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}}$ die totale Stromdichte bezeichnet sei. $\\sigma$ ist die elektrische Leitfähigkeit, $\\mathbf{E}$ ist das elektrische Feld. Da die Grössen $\\mathbf{J}$ und $\\mathbf{E}$ komplexwertig sind, ist der zweite Operand im Skalarprodukt komplex konjugiert. Die Größe $q$ beschreibt die Wärmeerzeugung pro Volumen $(\\text{W/m}^3)$ aufgrund des induktiven Joule-Effekts.\n",
+    "\n",
+    "\n",
+    "Ausserdem ist folgender Zusammehang als Ohmsches Gesetz für Leiter bekannt\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{J}_{\\text{int}} = \\sigma \\mathbf{E}.\n",
+    "$$\n",
+    "\n",
+    "Im rotationssymmetrischen Fall ist das elektrische Feld gegeben durch {eq}`eq:Erotsym`.\n",
+    "\n",
+    "Nun wird eine Formel für $q$ abhängig von $\\sigma$, $\\omega$ und $A_\\phi$ hergeleitet.\n",
+    "\n",
+    "$$ \\begin{align}\n",
+    "q &= \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E}^* | = \\frac{1}{2} | (\\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}})\\cdot \\mathbf{E}^* | \\\\\n",
+    "&= \\frac{1}{2} | ( \\sigma \\mathbf{E} + \\mathbf{J}_{\\text{ext}})\\cdot \\mathbf{E}^* | \\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "\n",
+    "```{code-block} python\n",
+    ":caption: Berechnung induktive Wärmequelle\n",
+    ":name: lst:induktiv_waerme\n",
+    "Ez   = -1j * omega * gfu  # gfu is A_phi\n",
+    "Jz   = sigma * Ez\n",
+    "Jtot = Jz + Jimp\n",
+    "Qe   = 1/2 * Norm(InnerProduct(Jtot, Conj(Ez)))\n",
     "```"
    ]
   }
