--- a/hana_project_book/Geometrie/stdGeo.ipynb
+++ b/hana_project_book/Geometrie/stdGeo.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "source": [
     "# Standard-Geometrie\n",
+    "Hier wird eine Geometrie mit mehreren Windungen und einem Metallstück (Rohr) im Innern der Spule generiert.\n",
+    "Der untere Rand ist die Rotationsachse.\n",
+    "\n",
     "## Includes"
    ]
   },
@@ -35,11 +38,7 @@
    "metadata": {},
    "source": [
     "## Definition Masse und Parameter\n",
-    "Wir setzen $r = 0.001\\,\\text{m}$ und $i_c = 10\\,\\text{A}$.\n",
-    "\n",
-    "Im rotationssymmetrischen Modell, mit den einzelnen Windungen modelliert, folgt für die Stromdichte\n",
-    "\n",
-    "$$ j_\\phi = \\frac{i_c}{r^2\\pi}. $$"
+    "Wir setzen $r = 0.001\\,\\text{m}$ und $i_c = 10\\,\\text{A}$."
    ]
   },
   {
@@ -181,7 +180,7 @@
    "metadata": {},
    "source": [
     "## Stromdichte speichern\n",
-    "Gemäss Gleichung {eq}`eq:Jrotsym` wird die Stromdichte berechnet und gespeichert. "
+    "Die Stromdichte wird gemäss Gleichung {eq}`eq:Jrotsym` berechnet und gespeichert. "
    ]
   },
   {
