--- a/hana_project_book/Problemformulierung/FormulierungWaermeleitung.ipynb
+++ b/hana_project_book/Problemformulierung/FormulierungWaermeleitung.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "(ref:RobinRand)=\n",
     "### Robin-Randbedingung\n",
-    "Eine teilweise Isolation kann mit einer Robin-Randbedingung modelliert werden, die ein Zusammenhang zwischen der Temperatur und dem Temperaturfluss herstellt. Hier impliziert, dass der Fluss direkt proportional zur Temperatur ist. Anders ausgedrückt fliesst an den heissen Stellen auch mehr Wärme durch die teilweise Isolation ab als an den kühlen Stellen. Hier wird angenommen, dass die Umgebungstemperatur ausserhalb des Gebiets 0°C ist.\n",
+    "Eine teilweise Isolation kann mit einer Robin-Randbedingung modelliert werden, die ein Zusammenhang zwischen der Temperatur und dem Temperaturfluss herstellt. Hier impliziert dies, dass der Fluss direkt proportional zur Temperatur ist. Anders ausgedrückt fliesst an den heissen Stellen auch mehr Wärme durch die teilweise Isolation ab als an den kühlen Stellen. Hier wird angenommen, dass die Umgebungstemperatur ausserhalb des Gebiets 0°C ist.\n",
     "\n",
     "$$  \\nabla T \\cdot \\mathbf{n} = - \\alpha T, \\quad x\\in \\partial\\Omega$$\n",
     "\n",
@@ -68,10 +68,10 @@
     "$$\n",
     "\n",
     "Man beachte, dass $\\lambda$ vom Ort abhängig ist.\n",
-    "Der Term mit der Divergenz $\\text{div}(\\lambda \\nabla T)$ könnte als $\\nabla \\cdot (\\lambda \\nabla T)$ geschrieben werden. Dies zeigt, dass die zweite Ableitung der Temperatur vorkommt. Daher verwenden wir für die linke Seite die partielle Integration im Mehrdimensionalen (Satz von Gauss):\n",
+    "Der Term mit der Divergenz $\\text{div}(\\lambda \\nabla T)$ könnte als $\\nabla \\cdot (\\lambda \\nabla T)$ geschrieben werden. Dies zeigt, dass die zweite Ableitung der Temperatur vorkommt. Daher verwenden wir für die linke Seite die partielle Integration im Mehrdimensionalen (Satz von Gauss) und erhalten\n",
     "\n",
     "$$\n",
-    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega - \\int_{\\partial\\Omega} \\lambda \\underbrace{\\nabla T \\cdot \\mathbf{n}}_{\\frac{\\partial T}{\\partial \\mathbf{n}}}\\, v\\, ds= \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega - \\int_{\\partial\\Omega} \\lambda \\underbrace{\\nabla T \\cdot \\mathbf{n}}_{\\frac{\\partial T}{\\partial \\mathbf{n}}}\\, v\\, ds= \\int_\\Omega q\\, v \\, d\\Omega .\n",
     "$$(eq:schwacheGlgTemp)\n",
     "\n",
     "Nun kommen die Randbedingungen ins Spiel.\n",
@@ -82,10 +82,10 @@
     "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega = \\int_\\Omega q\\, v \\, d\\Omega\n",
     "$$(eq:schwacheGlgTempDir)\n",
     "\n",
-    "Für **Neumann-Randbedingungen** $\\nabla T \\cdot \\mathbf{n} =0$ gilt für die Testfunktion$v \\in H^1$. Das Randintegral in der schwachen Gleichung entfällt, weil die Normalenableitung der Temperatur gleich Null ist.\n",
+    "Für **Neumann-Randbedingungen** $\\nabla T \\cdot \\mathbf{n}=g(s)$ sei die Testfunktion $v \\in H^1$. Das Randintegral in der schwachen Gleichung entfällt, wenn die Normalenableitung der Temperatur, bzw. $g(s)$, gleich Null ist.\n",
     "\n",
     "$$\n",
-    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega = \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega = \\int_\\Omega q\\, v \\, d\\Omega + \\int_{\\partial\\Omega} \\lambda\\, g(s)\\, v\\, ds\n",
     "$$(eq:schwacheGlgTempNeu)\n",
     "\n",
     "Für **Robin-Randbedingungen** $\\nabla T \\cdot \\mathbf{n} = - \\alpha T$ wird in der schwachen Gleichung $\\nabla T \\cdot \\mathbf{n}$ durch $- \\alpha T$ ausgedrückt. Das Randintegral gehört zur Bilinearform, weil $T$ darin vorkommt.\n",
