--- a/hana_project_book/Problemformulierung/FormulierungWirbelstrom.ipynb
+++ b/hana_project_book/Problemformulierung/FormulierungWirbelstrom.ipynb
@@ -157,15 +157,19 @@
     "\n",
     "$$ \\begin{aligned} \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega \\\\ \\qquad + \\int_{\\partial\\Omega} \\mu^{-1} \\left( B_r n_z\\, - B_z n_r\\right)\\, v \\, ds =  \\int_\\Omega j_\\phi v \\, d\\Omega \\end{aligned}$$(eq:schwacheGlgmitRand)\n",
     "\n",
+    "(ref:WirbelstromRand)=\n",
     "### Randbedingungen\n",
     "Übers Randintegral kommen die Randbedingungen ins Spiel. Auf der Rotationsachse (unten) ist gemäss Gleichung {eq}`eq:Asymbedingung` eine Dirichlet-Randbedingung gegeben, daher $v = 0\\quad \\forall x \\in \\partial\\Omega_{\\text{rotsym}}$. Das Randintegral verschwindet auf der Rotationsachse also. \n",
     "\n",
     "Auf den restlichen Randabschnitten (links, rechts, oben) ist $v$ nicht zwingend 0. Hier ist der Flussterm $\\mu^{-1} \\left( B_r n_z\\, - B_z n_r\\right)$ relevant, der aus der Partiellen Integration natürlicherweise hervorgeht. Homogene Neumann-Randbedingungen liegen vor, wenn man diesen Term gleich Null setzt. Dadurch entfällt das Randintegral. Für das resultierende $\\mathbf{B}$-Feld ist folgendes zu erwarten:\n",
     "\n",
+    "```{table} B-Feld am Rand\n",
+    ":name: bfeld_rand\n",
     "| Rand                | $B_r$         | Begründung für $B_r$         | $B_z$         | Begründung für $B_z$         |\n",
     "|---------------------|---------------|------------------------------|---------------|------------------------------|\n",
     "| Rechter/Linker Rand | $0$           | $n_z \\neq 0$                 | beliebig    | $n_r = 0$                    |\n",
     "| Oberer Rand         | beliebig     | $n_z = 0$                    | $0$           | $n_r \\neq 0$                 |\n",
+    "```\n",
     "\n",
     "### Schwache Gleichung\n",
     "Mit den beschriebenen Randbedingungen (Dirichlet-Randbedingung auf Rotationsachse, homogene Neumann-Randbedingung auf restlichen Randabschnitten) folgt aus {eq}`eq:schwacheGlgmitRand` die folgende schwache Gleichung für alle $v \\in H^1 $ mit $v=0$ auf $\\partial\\Omega_{\\text{rotsym}}$\n",
@@ -192,7 +196,7 @@
     "```{literalinclude} ../ImportExport/wirbelstrom_def.py\n",
     ":language: python\n",
     ":name: wirbelstrom_def_include\n",
-    ":caption: Inhalt von wirbelstrom_def.py\n",
+    ":caption: Wirbelstromproblem mit NGsolve\n",
     "```"
    ]
   },
@@ -212,7 +216,7 @@
     "wobei mit $\\mathbf{J} = \\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}}$ die totale Stromdichte bezeichnet sei. $\\sigma$ ist die elektrische Leitfähigkeit, $\\mathbf{E}$ ist das elektrische Feld. Da die Grössen $\\mathbf{J}$ und $\\mathbf{E}$ komplexwertig sind, ist der zweite Operand im Skalarprodukt komplex konjugiert. Die Größe $q$ beschreibt die Wärmeerzeugung pro Volumen $(\\text{W/m}^3)$ aufgrund des induktiven Joule-Effekts.\n",
     "\n",
     "\n",
-    "Ausserdem ist folgender Zusammehang als Ohmsches Gesetz für Leiter bekannt\n",
+    "Ausserdem ist folgender Zusammenhang als Ohmsches Gesetz für Leiter bekannt\n",
     "\n",
     "$$\n",
     "\\mathbf{J}_{\\text{int}} = \\sigma \\mathbf{E}.\n",
@@ -225,8 +229,9 @@
     "$$ \\begin{align}\n",
     "q &= \\frac{1}{2} | \\mathbf{J} \\cdot \\mathbf{E}^* | = \\frac{1}{2} | (\\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}})\\cdot \\mathbf{E}^* | \\\\\n",
     "&= \\frac{1}{2} | ( \\sigma \\mathbf{E} + \\mathbf{J}_{\\text{ext}})\\cdot \\mathbf{E}^* | \\\\\n",
-    "\\end{align}$$\n",
+    "\\end{align}$$(eq:indWaerme)\n",
     "\n",
+    "Dies wird in NGsolve wie folgt umgesetzt.\n",
     "\n",
     "```{code-block} python\n",
     ":caption: Berechnung induktive Wärmequelle\n",
