Topf Platzhalter ergänzt

--- a/hana_project_book/Geometrie/TopfGeo.ipynb
+++ b/hana_project_book/Geometrie/TopfGeo.ipynb
@@ -2,20 +2,219 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70b615a4-51f1-40c4-bf70-ceaa7c84cf0a",
+   "id": "f9729c85-7379-484c-829f-09a1a8098581",
    "metadata": {},
    "source": [
-    "# Geometrie mit Topf"
+    "# Geometrie mit Topf\n",
+    "Hier wird eine Geometrie mit mehreren Windungen und Topf generiert.\n",
+    "Der untere Rand ist die Rotationsachse.\n",
+    "\n",
+    "## Includes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "853d23a7-a5f8-4b0a-a7d8-d26442cf538d",
+   "execution_count": 1,
+   "id": "11d58a99-5191-4025-bcc8-e256403a00d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import sys, os\n",
+    "# Add the ImportExport directory to sys.path\n",
+    "import_export_dir = os.path.join(os.path.join(os.getcwd(), '..'), 'ImportExport')\n",
+    "if import_export_dir not in sys.path:\n",
+    "    sys.path.append(import_export_dir)\n",
+    "from global_parameters import *\n",
+    "from ngsolve import *\n",
+    "from ngsolve.webgui import Draw\n",
+    "from netgen.csg import *\n",
+    "from netgen.geom2d import SplineGeometry\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "387b065a-04f0-410c-8d6b-49c1d6d35f09",
+   "metadata": {},
+   "source": [
+    "## Definition Masse und Parameter\n",
+    "Wir setzen $r = 0.001\\,\\text{m}$ und $i_c = 10\\,\\text{A}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cdb507ec-564d-4575-b603-99c3daf6ad28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ic = 10                 # Strom in den Windungen (A)\n",
+    "\n",
+    "# Mesh Generation\n",
+    "l_air = 0.1             # Grösse der dargestellten Luft um denn Versuchsaufbau\n",
+    "r_wire = 0.0012          # Drahtdurchmesser in Metern\n",
+    "nx_wire = 15            # Anzahl Kabel in X-Richtung\n",
+    "ny_wire = 2             # Anzahl Kabel in Y-Richtung\n",
+    "dxdy_wire = 0.5*r_wire\n",
+    "\n",
+    "rA_core = 0.01          # Core Höhe\n",
+    "rI_core = 0.008\n",
+    "l_core = 0.08           # Core Länge\n",
+    "epsZero = 1e-8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0d58f6-ab10-4304-ba35-b1297e238cd4",
+   "metadata": {},
+   "source": [
+    "## Generieren des Meshs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "88e46a2d-03e9-4594-8861-f5bb6f6f20a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geo = SplineGeometry()\n",
+    "geo.AddRectangle(p1=(-l_air/2,epsZero),\n",
+    "                 p2=(l_air/2,l_air/2),\n",
+    "                 bcs=[\"rotsym\",\"outer_right\",\"outer_top\",\"outer_left\"],\n",
+    "                 leftdomain=1,\n",
+    "                 rightdomain=0)\n",
+    "pts = []\n",
+    "for i in range(nx_wire):\n",
+    "    for j in range(ny_wire):\n",
+    "        pts.append([\n",
+    "            i*(2*r_wire+dxdy_wire), \n",
+    "            rA_core+dxdy_wire+r_wire+j*(2*r_wire+dxdy_wire)\n",
+    "        ])\n",
+    "        geo.AddCircle(\n",
+    "            c=(i*(2*r_wire+dxdy_wire), \n",
+    "               rA_core+dxdy_wire+r_wire+j*(2*r_wire+dxdy_wire)),\n",
+    "            r=r_wire, bc=\"inner\",\n",
+    "            leftdomain=2,\n",
+    "            rightdomain=1)\n",
+    "pts = np.array(pts)\n",
+    "geo.AddRectangle(p1=(-l_core/2,rI_core),\n",
+    "                 p2=(l_core/2,rA_core),\n",
+    "                 bc=\"inner\",\n",
+    "                 leftdomain=3,\n",
+    "                 rightdomain=1)\n",
+    "geo.SetMaterial (1, \"air\")\n",
+    "geo.SetMaterial (2, \"copper\")\n",
+    "geo.SetMaterial (3, \"core\")\n",
+    "geo.SetDomainMaxH(3,(rA_core-rI_core)/2)\n",
+    "\n",
+    "mesh = Mesh(geo.GenerateMesh(maxh=0.0025))\n",
+    "#print(mesh.GetBoundaries())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06ac1829-0c80-45c1-9f2e-b8cd35a1b277",
+   "metadata": {},
+   "source": [
+    "## Darstellung Mesh mit Materialien\n",
+    "```{table} Topf-Geometrie Materialien\n",
+    ":name: topfMeshMaterials\n",
+    "| Material                             | Farbe             |\n",
+    "|------------------------------|-------------|\n",
+    "| Luft              | blau |\n",
+    "| Kupfer | grün |\n",
+    "| Kern | rot |\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16afd307-73db-452f-82eb-a5bb80565572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('air', 'copper', 'core')\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12015029d34e4bf8b4a91f81cce9dffe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BaseWebGuiScene"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualisierung\n",
+    "mat_mapping = {name: i+1 for i, name in enumerate(mesh.GetMaterials())}\n",
+    "print(mesh.GetMaterials())\n",
+    "cf = mesh.MaterialCF(mat_mapping)\n",
+    "Draw(cf, mesh, \"material_colors\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03134d91-50bd-4177-9d26-f13ba10e2d65",
+   "metadata": {},
+   "source": [
+    "## Stromdichte speichern\n",
+    "Die Stromdichte wird gemäss Gleichung {eq}`eq:Jrotsym` berechnet und gespeichert. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f84b01de-a5c0-4650-b6d8-781b29b99b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Jimp = CoefficientFunction([0,ic/(r_wire**2*pi),0])\n",
+    "Vstore = L2(mesh, order=4)\n",
+    "gf = GridFunction(Vstore)\n",
+    "gf.Set(Jimp)\n",
+    "#Draw(gf, mesh)\n",
+    "# Now save as above\n",
+    "gf.Save(\"../ImportExport/JimpTopfGeo.gf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "766f09e0-7c0f-42d0-9d3e-baf9c538a720",
+   "metadata": {},
+   "source": [
+    "## Mesh speichern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "38239788-a970-40f4-afff-7b056e6e5835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh.ngmesh.Save(\"../ImportExport/myTopfMesh.vol\")"
    ]
   }
  ],
