fixed bib entry

--- a/hana_project_book/references.bib
+++ b/hana_project_book/references.bib
@@ -3,7 +3,7 @@
 
 @techreport{Stingelin2025HANAProjekt,
 	author      = {Simon Stingelin},
-	title       = {HANA Numerik SEP Projekt: Aufgabenstellung},
+	title       = {{HANA Numerik SEP Projekt: Aufgabenstellung}},
 	institution = {Zürcher Hochschule für Angewandte Wissenschaften (ZHAW)},
 	year        = {2025},
 	month       = {April},
