Probleme Topf gelöst

--- a/hana_project_book/LsgVisualisierungDiskussion/LsgStdGeo.ipynb
+++ b/hana_project_book/LsgVisualisierungDiskussion/LsgStdGeo.ipynb
@@ -512,8 +512,9 @@
    "id": "106b4700-9e99-43b0-8712-02f1230c036f",
    "metadata": {},
    "source": [
-    "### Lösen des Systems für Robin-Randwerte\n",
-    "Wie in Abschnitt {ref}`ref:RobinRand` beschrieben, lässt sich eine teilweise Isolation mit Robin-Randbedingungen modellieren. Je tiefer der Parameter $\\alpha$, desto besser die Isolation."
+    "### Lösen des Systems für Robin-Randbedingung\n",
+    "Wie in Abschnitt {ref}`ref:RobinRand` beschrieben, lässt sich eine teilweise Isolation mit Robin-Randbedingungen modellieren. Je tiefer der Parameter $\\alpha$, desto besser die Isolation.\n",
+    "#### Robin-Randbedingung mit $\\alpha=1$"
    ]
   },
   {
@@ -568,6 +569,46 @@
     "```{note}\n",
     "- Gute Isolation mit $\\alpha=1$ (hohe Temperatur)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f95cedc-443e-4658-9b44-f927cf2d7d1f",
+   "metadata": {},
+   "source": [
+    "#### Robin-Randbedingung mit $\\alpha=10$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a595f40-e5b6-4c3f-b83a-0117c94b795a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 10\n",
+    "tp.add_robin_boundary_condition('outer_left|outer_top|outer_right', alpha, lamAir)\n",
+    "gfT = tp.solve()\n",
+    "if gfT:\n",
+    "    tp.draw_temperature_solution()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1a8433c-d172-43ce-859b-57c6d7b0958f",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "- Mittelmässige Isolation mit $\\alpha=10$\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d10ea167-ad96-480c-8a45-74bd2334d99c",
+   "metadata": {},
+   "source": [
+    "#### Robin-Randbedingung mit $\\alpha=1000$"
    ]
   },
   {
