--- a/hana_project_book/LsgVisualisierungDiskussion/LsgTopfGeo.ipynb
+++ b/hana_project_book/LsgVisualisierungDiskussion/LsgTopfGeo.ipynb
@@ -80,12 +80,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b699b1422084d66a8e0603921de7f0c",
+       "model_id": "dba8d47ba7da4bca9966bd08b9b63963",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -131,12 +131,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc3430c0ad9549cf968f52bea6d26719",
+       "model_id": "4f4edaf9e61b49a6b85d7dfe279c2831",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 's…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 'sp…"
       ]
      },
      "metadata": {},
@@ -152,12 +152,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dac31e76c0f7489eb6920184bc3c4de1",
+       "model_id": "91b0880d671d4040a467f94b3be64dfc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 's…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {'Complex': {'phase': 0.0, 'sp…"
       ]
      },
      "metadata": {},
@@ -173,12 +173,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4709060240bb4cc999a3976f4d5812f0",
+       "model_id": "2d9eea6fbeb94dc4b6f1e8763c473ea5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -215,12 +215,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73812cdcd82f4aa986e9e33871758864",
+       "model_id": "15a2a80095e84e23bfecd697637bebae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -236,12 +236,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3349751054d647aea29fa56e9ca72ac4",
+       "model_id": "b9daaeabf09c491ca7bd9d7beaaf6a8e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -286,18 +286,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating thermal source Qe...\n"
+      "Calculating thermal source Qe...\n",
+      "Info: InnerProduct has been changed and takes now conjugate\n",
+      "since c2 is already a Conjugate operation, we don't take conjugate\n",
+      "is you don't want conjugate, use a*b\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e4d10043044370ab1b2fa510848826",
+       "model_id": "1c14fa3905ae4b56a6c1607fad4a0fa6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -349,12 +352,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6373e7f83564fcab4bc9f90a57012ce",
+       "model_id": "e269890e5fea4260b3a2de8c73a0b3c4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -373,7 +376,7 @@
    "id": "106b4700-9e99-43b0-8712-02f1230c036f",
    "metadata": {},
    "source": [
-    "### Lösen des Systems für Robin-Randwerte\n",
+    "### Lösen des Systems für Robin-Randbedingung mit $\\alpha=10$\n",
     "Wie in Abschnitt {ref}`ref:RobinRand` beschrieben, lässt sich eine teilweise Isolation mit Robin-Randbedingungen modellieren. Je tiefer der Parameter $\\alpha$, desto besser die Isolation."
    ]
   },
@@ -400,12 +403,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "299306171d0249648cfdfec964f96b17",
+       "model_id": "8b171c6fb2d748fa8285f64790266de4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -424,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
