--- a/hana_project_book/Geometrie/TopfGeo.ipynb
+++ b/hana_project_book/Geometrie/TopfGeo.ipynb
@@ -103,7 +103,7 @@
     "geo = SplineGeometry()\n",
     "geo.AddRectangle(p1=(-l_air/2,epsZero),\n",
     "                p2=(l_air/2,l_air/2),\n",
-    "                bcs=[\"rotsym\",\"outer\",\"outer\",\"outer\"],\n",
+    "                bcs=[\"rotsym\",\"outer_right\",\"outer_top\",\"outer_left\"],\n",
     "                leftdomain=1,\n",
     "                rightdomain=0)\n",
     "\n",
@@ -160,7 +160,7 @@
     "|------------------------------|-------------|\n",
     "| Luft              | blau |\n",
     "| Kupfer | türkis |\n",
-    "| Topf | gelb |\n",
+    "| Topf (Core) | gelb |\n",
     "| Wasser | rot |\n",
     "```"
    ]
@@ -181,12 +181,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77fb144cd3414dd69605dffab6e829a7",
+       "model_id": "04b6f3183f5f4d5f9da8f295a6df4738",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "WebGuiWidget(layout=Layout(height='500px', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.2…"
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.24…"
       ]
      },
      "metadata": {},
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
